# testg

./: CONTRIBUTING.adoc  Jenkinsfile  MANIFEST.in  Makefile  README.md  pytest.ini  requirements.tests.txt  requirements.txt  rolespath.py  setup.cfg  setup.py
bootstrap/workstation/: dev_boostrap.sh
docs/: Makefile  requirements.txt
docs/source/: api.md  conf.py  design.md  index.md
docs/source/_templates/: pypi_servers.md
docs/source/contributors/: README.md  core.md  core_publish.md  others.md
docs/source/developers/: quickstart.md
docs/source/infrastructure/: README.md  classroom.md  pypi.md
docs/source/instructors/: README.md
generator/: MANIFEST.in  setup.cfg
generator/lab_generator/: __init__.py
generator/lab_generator/templates/: LICENSE  MANIFEST.in.j2  Makefile  README.md.j2  setup.cfg.j2  setup.py.j2
infrastructure/ci/pypi/: package_exists.py
infrastructure/classroom/: inventory  vars.yml
infrastructure/classroom/playbooks/: site.yml
infrastructure/devpi/: secrets-example.yml
infrastructure/devpi/playbooks/: site.yml
infrastructure/private-pypi/: .gitignore  inventory  secrets-example.yml  vars-example.yml
infrastructure/private-pypi/playbooks/: site.yml
infrastructure/pypiserver/: Dockerfile  test.sh
infrastructure/pypiserver/deploy/: deploy.sh  pypi-dc.yml  pypi-is.yml  pypi-pvc.yml  pypi-route.yml  pypi-svc.yml
infrastructure/pypiserver/playbooks/: site.yml
infrastructure/reporting/: README.md  reporting-server.sh  requirements.txt  server.py
infrastructure/reporting/data/: initialize-data.py
integration/: README.adoc  requirements-gemfury.txt  requirements-pp.txt
packages-gl006/: HISTORY.adoc  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
packages-gl006/src/gl006/: __init__.py  common.py  error-messages.py  example-autoplay.py  example-module.py  example-openshift.py  example-playbook.py  example-python-commands.py  example-python-new-style.py  example-python.py  example-watch.py
packages-gl006/src/gl006/ansible/: test.yml
packages-gl006/src/gl006/ansible/exampleAutoPlay/: finish.yml  grade.yml
packages-gl006/src/gl006/ansible/examplePlaybook/: inventory  playbookFinish.yml  playbookGrade.yml  playbookStart.yml
packages-gl006/src/gl006/ansible/host_vars/workstation/: exercises.yml
packages-gl006/src/gl006/ansible/roles/test/tasks/: main.yml
packages-gl006/src/gl006/ansible/roles/test/templates/: test.j2
packages-gl006/src/gl006/materials/solutions/example-openshift/: clusterrolebinding.yaml  project.yaml  resources.yaml  serviceaccount.yaml
src/labs/: activities.py  config.ini  course.py  environment.py  grading.py  lab.py  labconfig.py  labload.py  lablog.py  pkgconfig.py  version.py
src/labs/common/: config.py  http.py  labcommand.py  labtools.py  playbooks.py  steps.py  tasks.py  userinterface.py  utils.py  workspace.py
src/labs/core/: __init__.py  step.py
src/labs/system/: __init__.py  info.py  report.py  reporters.py
src/labs/telemetry/: __init__.py  config.py  consent.py  data.py  session.py  upload.py
src/labs/ui/: __init__.py  _constants.py  legacy.py  step.py  tools.py
src/labs/watch/: __init__.py  monitor.py  round.py  watchstep.py
tests/: conftest.py
tests/_util/: config-log-to-dir.yaml  config.yaml  workspace.py
tests/integration/: git_test.py  lab_test.py
tests/testcourse/: README.md  setup.cfg  setup.py
tests/testcourse/ts000/: test_python_classic_grading.py  test_python_lab.py  test_python_lab_error.py
tests/unit/: environment_test.py  test_course.py  test_labconfig.py  test_labload.py  test_lablog.py  test_pkgconfig.py
tests/unit/common/: test_commands.py  test_containers.py  test_git.py  test_http.py  test_labcommand.py  test_steps.py  test_tasks.py  (+3 more)
(+81 files in other folders)
