[metadata]
name = rht-labs-core
description = Red Hat Training Lab Framework
url = https://github.com/RedHatTraining/rht-labs-core/
long_description = file: README.md
long_description_content_type = text/markdown
author = Jim Rigsbee
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Students
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Training
    Topic :: Utilities
author_email = jrigsbee@redhat.com
keywords = training, labs
maintainer = Jim Rigsbee
maintainer_email = jrigsbee@redhat.com
project_urls =
    Source=https://github.com/RedHatTraining/rht-labs-core
    Tracker=https://github.com/RedHatTraining/rht-labs-core/issues

[options]
packages = find:
install_requires =
    click~=8.0.4
    PyYAML>=5.3.1
    ansible-runner>=1.4.6, <2.3.2
    psutil==5.9.0
    requests~=2.25.1
    halo==0.0.31
    log-symbols==0.0.14
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.entry_points]
console_scripts =
    lab=labs.lab:main

[options.extras_require]
git = GitPython==3.1.12

#[options.extras_require]
#docs =
#    sphinx >= 3
#    sphinx-argparse >= 0.2.5
#    sphinx-rtd-theme >= 0.4.3
#    towncrier >= 19.9.0rc1
#    proselint >= 0.10.2
#testing =
#    packaging>=20.0;python_version>"3.4"
#    pytest >= 4
#    coverage >= 5
#    coverage_enable_subprocess >= 1
#    pytest-xdist >= 1.31.0
#    pytest-mock >= 2
#    pytest-env >= 0.6.2
#    pytest-randomly >= 1
#    pytest-timeout >= 1
#    pytest-freezegun >= 0.4.1
#    flaky >= 3
#    xonsh >= 0.9.16; python_version > '3.4' and python_version != '3.9'

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true

#[tool:pytest]
#markers =
#    slow
#junit_family = xunit2
#addopts = --tb=auto -ra --showlocals
#env =
#    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
#    PYTHONIOENCODING=utf-8

[flake8]
exclude = .git,venv,.venv,env,.env,__pycache__,docs,dist
max-complexity = 10

[tool:pytest]
testpaths = tests
