[metadata]
name = rht-labs-gl006
description = Red Hat Training Labs for Course GL006
url = https://github.com/RedHatTraining/rht-labs-core/tree/master/packages-gl006
long_description = file: README.md
long_description_content_type = text/markdown
author = Jim Rigsbee
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Students
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Training
    Topic :: Utilities
author-email = jrigsbee@redhat.com
keywords = training, labs
maintainer = Jim Rigsbee
maintainer-email = jrigsbee@redhat.com
project_urls =
    Source=https://github.com/RedHatTraining/rht-labs-core/tree/master/packages-gl006
    Tracker=https://github.com/RedHatTraining/rht-labs-core/issues

[options]
packages = find:
install_requires =
    # normally you'll want to specify versions here, like ~=1.2.3. However, for
    # this test course we don't specify versions because we want "latest"
    rht-labs-core
    rht-labs-ocp
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true
